[gd_scene load_steps=5 format=3 uid="uid://s21gt88qcgge"]

[ext_resource type="Script" path="res://scripts/GUI/weapon_card.gd" id="1_c5ybo"]
[ext_resource type="Texture2D" uid="uid://cjrwjke53fr3v" path="res://testures/weapon_preview/gun_icon.png" id="2_ey5hk"]
[ext_resource type="Texture2D" uid="uid://c8nw7lcj0cqgi" path="res://testures/GUI_SVG/LabelBackdropUp.svg" id="3_k0hy1"]
[ext_resource type="Texture2D" uid="uid://cmfxwty8co7tl" path="res://testures/GUI_SVG/LabelBackdropDown.svg" id="4_x8xaj"]

[node name="MarginContainer" type="Button"]
custom_minimum_size = Vector2(266, 357)
offset_right = 266.0
offset_bottom = 357.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_c5ybo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -172.0
offset_right = 115.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WeaponIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_ey5hk")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_k0hy1")

[node name="WeaponName" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 26
text = "[weapon name]"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("4_x8xaj")

[node name="WeaponPrice" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "[0	]"
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
